# FrameChain-python

./: README.md  pyproject.toml
framechain/: __init__.py  schema.py
framechain/chains/: adjust_brightness.py  adjust_color.py  adjust_contrast.py  adjust_sharpness.py  crop.py  decorator.py  edge_detection.py  emboss.py  equalize.py  flip.py  functional.py  gaussian_blur.py  greyscale copy.py  greyscale.py  grid.py  posterize.py  rotate.py  simple_chain.py  solarize.py  unsharp_mark.py
framechain/embedding_models/: base.py
framechain/frames/: grid.py  merge.py  split.py
framechain/models/: __init__.py
framechain/ops/: __init__.py
framechain/segmentation/: base.py
framechain/sequential_models/: base.py
framechain/transformations/: scale.py
framechain/utils/: channel_format.py  image_type.py  scale.py  types.py
